--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# IDE files
+*.layout
+*.depend
+
 # Compiled Object files
 *.slo
 *.lo
@@ -19,3 +23,12 @@
 *.exe
 *.out
 *.app
+/NCR5976/*.sdf
+/NCR5976/*.user
+/NCR5976/Debug
+/NCR5976/Debug/*
+/NCR5976/ipch
+/NCR5976/ipch/*
+/NCR5976/Release
+/NCR5976/Release/*
+/obj
