DEF-файл включён в проект.

--- a/NCR5976/NCR5976.vcxproj
+++ b/NCR5976/NCR5976.vcxproj
@@ -92,6 +92,9 @@
     <ClCompile Include="..\NcrComPort.cpp" />
     <ClCompile Include="..\stdafx.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\NcrAddIn.def" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
