--- a/NCR5976/NCR5976.vcxproj.filters
+++ b/NCR5976/NCR5976.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\NcrAddIn.def">
+      <Filter>Заголовочные файлы</Filter>
+    </None>
+  </ItemGroup>
 </Project>
